2011-02-21  vadim  <vadim@netcitadel.com>

	* InterfaceData.cpp (guessLabel): fixes #2113 "ASA/PIX SNMP
	discovery - assign default labels based on interface description".
	Added pattern to match Cisco ASA interface description which is
	different from Cisco PIX interface descriptions as returned via
	snmp.

2011-02-20  vadim  <vadim@netcitadel.com>

	* BaseCompiler.cpp (getErrorsForRule): fixes #2124 "some error
	messages get multiplied when compiler splits rules". Under certain
	circumstances error messages could appear multiple times in the
	generated script.

	* Compiler.cpp (_expand_interface): fixes #1920 "Setting host
	interface to unnumbered after it has been assigned IP address
	doesn't have desired effect". Compiler still used ip addresses
	that belonged to the interface even if it switchd to "unnumbered".
	These children address objects should be ignored.

2011-02-19  vadim  <vadim@netcitadel.com>

	* NATCompiler_pix.cpp (processNext): see #2098 Added support for
	user-configurable inbound and outbound interfaces in Cisco PIX/ASA
	NAT rules. Two new columns appear in the rule set view: "Inbound
	Interface" and "Outbound Interface". If user leaves one or both
	columns blank, the GUI shows "Auto" in there and policy compiler
	picks corresponding interface automatically. Leaving both columns
	blank ("Auto") triggers backwards-compatible automatic behavior
	where both interfaces are picked automatically. Multiple interface
	objects and groups of interfaces are allowed in these columns.

	* ClusterInterfaceWidget.cpp (getInterfaceData): fixes #2117 "CARP
	interfaces in cluster that use VLAN interaces have no interface
	set to MASTER". When PF cluster configuration was built using vlan
	interfaces of member firewalls, CARP interfaces were not properly
	configured with master/slave choice user makes on the first page
	of the new cluster wizard.

	* configlets/bsd/update_addresses: fixes #2116 "When CARP